--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
   </script>
   <script type="text/javascript">
@@ -19,7 +21,10 @@
       });
     })();
   </script>
-  <meta name="description" content="Portfolio website of Nedas Barsteika" />
+
+  <meta name="description" content="Portfolio of Nedas Barsteika, a creative web developer specializing in modern web design, responsive development and innovative digital solutions." />
+  <meta name="keywords" content="Nedas Barsteika, portfolio, web developer, web design, responsive development, digital solutions, creative web developer" />
+  <meta name="google-site-verification" content="b6TIoPBijr7j7dtzvPc65ocXFwk6RQYilNzrdYr5xjs" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
